--- a/FrontendApplication/ticket-management/Dockerfile
+++ b/FrontendApplication/ticket-management/Dockerfile
@@ -1,11 +1,16 @@
 FROM node:18 AS build
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
+COPY package.json .
+COPY package-lock.json .
 COPY . .
+RUN npm install
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/build/ /etc/nginx/html/
+
+WORKDIR /etc/nginx/html/
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 443
+CMD ["nginx","-g","daemon off;"]
